--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ footer {
     color: green;
 }
 
-stuff {
-    display: flex;
-    justify-content: center;;
+.footer-class {
+    display:flex;
+    justify-content: center;
 }
